# mink-core

./: .clang-format  .gitignore  .travis.yml  .ycm_extra_conf.py  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile.am  README.md  SECURITY.md  authors.sh  autogen.sh  changelog.sh  cog.toml  configure.ac  sonar-project.properties  version.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: c-cpp.yml
data/: mink_db.schema
lib/libantlr3c-3.4/: Makefile.am  configure.ac  configure.scan  configure~
src/asn1/: asn1.cpp
src/cfg/: antlr_utils.cpp  config_gdt.cpp  minkParser.c  mink_config.cpp  plgcfg.cpp  plgcfg_events.cpp
src/cli/: cli.cpp
src/codegen/: codegen.cpp  tmpl_plg_make.txt  tmpl_plugin.txt
src/daemon/: daemon.cpp
src/gdt/: gdt.asn  gdt.cpp  gdt_def.cpp  gdt_grpc_client.cpp  gdt_reg_events.cpp  gdt_utils.cpp
src/include/: antlr_utils.h  asn1.h  atomic.h  chunk.h  cli.h  config_gdt.h  daemon.h  gdt.h  gdt_def.h  gdt_reg_events.h  gdt_stats.h  gdt_utils.h  json_rpc.h  minkLexer.h  minkParser.h  mink_config.h  mink_dynamic.h  mink_err_codes.h  mink_plugin.h  mink_sqlite.h  mink_utils.h  plgcfg_events.h  pool.h  ring.h  sctp.h  spscq.h
src/mcfg/cfgd/: minks-os-systemd.mcfg
src/mcfg/cli/: default.mcfg
src/net/: chunk.cpp  sctp.cpp
src/proto/: add_cmd.sh  add_plg.sh  gdt.grpc.pb.cc  gdt.grpc.pb.h  gdt.pb.cc  gdt.pb.enums_only.h  gdt.pb.enums_only.txt  gdt.pb.h  gdt.proto  gen.sh
src/services/cli/: cli_service.cpp
src/services/config/: configd.cpp  events.cpp  events.h
src/services/grpc/: events.cpp  events.h  gdtgrpc.cpp  gdtgrpc.h  grpc.cpp  grpc.h  grpcd.cpp
src/services/json_rpc/: events.cpp  events.h  jrpc.cpp  jrpc.h  jrpcd.cpp  ws_server.cpp  ws_server.h
src/services/routing/: cfg_events.cpp  cfg_events.h  routing.cpp  routing.h  routingd.cpp  routingd_events.cpp  routingd_events.h
src/services/stats/: gdttrapc.cpp
src/services/sysagent/: events.cpp  events.h  sysagent.cpp  sysagent.h  sysagentd.cpp
src/services/sysagent/plugins/cfgd/: Makefile.am  plg_sysagent_cfgd.cpp
src/services/sysagent/plugins/cgroup2/: Makefile.am  plg_sysagent_cgroup2.cpp
src/services/sysagent/plugins/clips/: Makefile.am  plg_sysagent_clips.cpp
src/services/sysagent/plugins/lua/: Makefile.am  mink.lua  mink_lua.cpp  plg_sysagent_lua.cpp
src/services/sysagent/plugins/modbus/: Makefile.am  plg_sysagent_modbus.cpp
src/services/sysagent/plugins/mosquitto_auth/: Makefile.am  plg_mosquitto_auth.cpp
src/services/sysagent/plugins/mqtt/: Makefile.am  plg_sysagent_mqtt.cpp
src/services/sysagent/plugins/ndpi/: Makefile.am  plg_sysagent_ndpi.cpp
src/services/sysagent/plugins/openwrt/: Makefile.am  plg_sysagent_openwrt.cpp
src/services/sysagent/plugins/syslog/: Makefile.am  plg_sysagent_syslog.cpp
src/services/sysagent/plugins/sysmon/: Makefile.am  plg_sysagent_sysmon.cpp
src/services/sysagent/plugins/system/: Makefile.am  plg_system.cpp
src/services/sysagent/plugins/systemd/: Makefile.am  plg_sysagent_systemd.cpp
src/services/sysagent/plugins/unix/: Makefile.am  plg_sysagent_unix.cpp
src/stats/: gdt_stats.cpp
src/utils/: json_rpc.cpp  mink_dynamic.cpp  mink_plugin.cpp  mink_sqlite.cpp  mink_utils.cpp
src/vim/: README
src/vim/ftdetect/: mink.vim
src/vim/syntax/: minkcfg.vim
test/data/: jrpc.txt
